# wrapper_python_for_C

./: CMakeLists.txt  README.md  example.py
headers/: test.h
sources/: test.c
wrapper/: CMakeLists.txt  pywrapper.pyx  wrapper.pxd
